// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checker diagnostics - should-work-with-arrays 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-binary-shorthand 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-break-and-continue 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-function 1`] = `
Array [
  "Cannot find shorthand method",
]
`;

exports[`Checker diagnostics - should-work-with-function-call 1`] = `
Array [
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-function-expression 1`] = `
Array [
  "Cannot find shorthand method",
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-get-shorthand 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-global-variable 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-if-expression 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-if-expression-with-if-only 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-integer 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-local-variable 1`] = `
Array [
  "Must be expression",
]
`;

exports[`Checker diagnostics - should-work-with-method-call 1`] = `
Array [
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-nested-function 1`] = `
Array [
  "Cannot find shorthand method",
  "Cannot find shorthand method",
  "Cannot find shorthand method",
  "Cannot find shorthand method",
  "Cannot assign",
  "Is not callable",
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-null 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-object-without-extends 1`] = `
Array [
  "Cannot find property",
  "Cannot find property",
]
`;

exports[`Checker diagnostics - should-work-with-objects 1`] = `
Array [
  "Cannot find property",
  "Cannot find property",
]
`;

exports[`Checker diagnostics - should-work-with-objects-and-slots 1`] = `
Array [
  "Cannot find property",
  "Cannot find shorthand method",
  "Cannot find shorthand method",
  "Cannot find shorthand method",
  "Cannot find property",
]
`;

exports[`Checker diagnostics - should-work-with-printf 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-set-shorthand 1`] = `
Array [
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-slot-assignment 1`] = `
Array [
  "Cannot assign",
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-slot-lookup 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-arrays 1`] = `
Array [
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-type-function-call 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-function-expression 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-function-parameter 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-function-statement 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-integer 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-method-signature 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-method-slot 1`] = `
Array [
  "Cannot find property",
  "Cannot find shorthand method",
  "Cannot find shorthand method",
  "Cannot find property",
]
`;

exports[`Checker diagnostics - should-work-with-type-null 1`] = `
Array [
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-type-typedef 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-type-variable-reference 1`] = `
Array [
  "Cannot assign",
]
`;

exports[`Checker diagnostics - should-work-with-type-variable-slot 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-variable-assignment 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-variable-reference 1`] = `Array []`;

exports[`Checker diagnostics - should-work-with-while-expression 1`] = `Array []`;

exports[`Checker types - should-work-with-arrays 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "ArraysExpression",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 7,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 11,
  },
  Object {
    "id": 11,
    "kind": "ArraysExpression",
    "pos": 14,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 21,
  },
]
`;

exports[`Checker types - should-work-with-binary-shorthand 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 10,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 18,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 21,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 25,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 27,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 31,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 33,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 37,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 39,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 43,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 45,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 49,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 51,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 55,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 57,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 61,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 63,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 68,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 70,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 75,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 77,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 82,
  },
]
`;

exports[`Checker types - should-work-with-break-and-continue 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 3,
    "kind": "WhileExpression",
    "pos": 10,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 16,
  },
  Object {
    "id": 4,
    "kind": "VariableAssignmentExpression",
    "pos": 23,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 23,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 27,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 31,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 37,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 59,
  },
  Object {
    "id": 7,
    "kind": "IfExpression",
    "pos": 66,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 69,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 74,
  },
  Object {
    "id": 2,
    "kind": "SequenceOfStatements",
    "pos": 85,
  },
  Object {
    "id": 2,
    "kind": "ContinueExpression",
    "pos": 85,
  },
  Object {
    "id": 8,
    "kind": "IfExpression",
    "pos": 98,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 101,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 106,
  },
  Object {
    "id": 2,
    "kind": "SequenceOfStatements",
    "pos": 117,
  },
  Object {
    "id": 2,
    "kind": "BreakExpression",
    "pos": 117,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 127,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 148,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 164,
  },
]
`;

exports[`Checker types - should-work-with-function 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 0,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 7,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 10,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 13,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 22,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 22,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 26,
  },
]
`;

exports[`Checker types - should-work-with-function-call 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 0,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 7,
  },
  Object {
    "id": 0,
    "kind": "SequenceOfStatements",
    "pos": 15,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 15,
  },
  Object {
    "id": 0,
    "kind": "FunctionCallExpression",
    "pos": 18,
  },
  Object {
    "id": 9,
    "kind": "VariableReferenceExpression",
    "pos": 18,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 20,
  },
]
`;

exports[`Checker types - should-work-with-function-expression 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 18,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 26,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 26,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 30,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 33,
  },
  Object {
    "id": 0,
    "kind": "FunctionCallExpression",
    "pos": 44,
  },
  Object {
    "id": 9,
    "kind": "VariableReferenceExpression",
    "pos": 44,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 47,
  },
]
`;

exports[`Checker types - should-work-with-get-shorthand 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 11,
    "kind": "ArraysExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 14,
  },
  Object {
    "id": 0,
    "kind": "GetShorthand",
    "pos": 18,
  },
  Object {
    "id": 19,
    "kind": "VariableReferenceExpression",
    "pos": 18,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 20,
  },
]
`;

exports[`Checker types - should-work-with-global-variable 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
]
`;

exports[`Checker types - should-work-with-if-expression 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 7,
    "kind": "IfExpression",
    "pos": 11,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 14,
  },
  Object {
    "id": 3,
    "kind": "SequenceOfStatements",
    "pos": 21,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 21,
  },
  Object {
    "id": 3,
    "kind": "SequenceOfStatements",
    "pos": 43,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 43,
  },
]
`;

exports[`Checker types - should-work-with-if-expression-with-if-only 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 7,
    "kind": "IfExpression",
    "pos": 11,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 14,
  },
  Object {
    "id": 3,
    "kind": "SequenceOfStatements",
    "pos": 21,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 21,
  },
]
`;

exports[`Checker types - should-work-with-integer 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 2,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 5,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 16,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 19,
  },
]
`;

exports[`Checker types - should-work-with-local-variable 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 0,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 16,
  },
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 16,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 24,
  },
]
`;

exports[`Checker types - should-work-with-method-call 1`] = `
Array [
  Object {
    "id": 8,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 10,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 11,
    "kind": "MethodSlot",
    "pos": 20,
  },
  Object {
    "id": 0,
    "kind": "SequenceOfStatements",
    "pos": 41,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 41,
  },
  Object {
    "id": 0,
    "kind": "MethodCallExpression",
    "pos": 44,
  },
  Object {
    "id": 15,
    "kind": "VariableReferenceExpression",
    "pos": 44,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 48,
  },
]
`;

exports[`Checker types - should-work-with-nested-function 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 10,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 19,
  },
  Object {
    "id": 9,
    "kind": "SequenceOfStatements",
    "pos": 27,
  },
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 27,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 35,
  },
  Object {
    "id": 8,
    "kind": "FunctionStatement",
    "pos": 41,
  },
  Object {
    "id": 0,
    "kind": "ParameterDeclaration",
    "pos": 50,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 62,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 62,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 66,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 70,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 74,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 78,
  },
  Object {
    "id": 10,
    "kind": "VariableReferenceExpression",
    "pos": 84,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 88,
  },
  Object {
    "id": 1,
    "kind": "FunctionCallExpression",
    "pos": 99,
  },
  Object {
    "id": 0,
    "kind": "FunctionCallExpression",
    "pos": 99,
  },
  Object {
    "id": 13,
    "kind": "VariableReferenceExpression",
    "pos": 99,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 103,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 106,
  },
]
`;

exports[`Checker types - should-work-with-null 1`] = `
Array [
  Object {
    "id": 2,
    "kind": "NullExpression",
    "pos": 0,
  },
]
`;

exports[`Checker types - should-work-with-object-without-extends 1`] = `
Array [
  Object {
    "id": 8,
    "kind": "ObjectsExpression",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 12,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 20,
  },
  Object {
    "id": 9,
    "kind": "MethodSlot",
    "pos": 27,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 47,
  },
  Object {
    "id": 1,
    "kind": "SlotLookupExpression",
    "pos": 47,
  },
  Object {
    "id": 0,
    "kind": "ThisExpression",
    "pos": 47,
  },
]
`;

exports[`Checker types - should-work-with-objects 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 8,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 20,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 28,
  },
  Object {
    "id": 10,
    "kind": "ObjectsExpression",
    "pos": 32,
  },
  Object {
    "id": 11,
    "kind": "VariableReferenceExpression",
    "pos": 39,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 47,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 55,
  },
  Object {
    "id": 12,
    "kind": "MethodSlot",
    "pos": 62,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 82,
  },
  Object {
    "id": 1,
    "kind": "SlotLookupExpression",
    "pos": 82,
  },
  Object {
    "id": 0,
    "kind": "ThisExpression",
    "pos": 82,
  },
]
`;

exports[`Checker types - should-work-with-objects-and-slots 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 8,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 20,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 28,
  },
  Object {
    "id": 10,
    "kind": "ObjectsExpression",
    "pos": 32,
  },
  Object {
    "id": 11,
    "kind": "VariableReferenceExpression",
    "pos": 39,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 47,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 55,
  },
  Object {
    "id": 12,
    "kind": "MethodSlot",
    "pos": 62,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 89,
  },
  Object {
    "id": 1,
    "kind": "SlotLookupExpression",
    "pos": 89,
  },
  Object {
    "id": 0,
    "kind": "ThisExpression",
    "pos": 89,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 98,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 102,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 106,
  },
]
`;

exports[`Checker types - should-work-with-printf 1`] = `
Array [
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 30,
  },
]
`;

exports[`Checker types - should-work-with-set-shorthand 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 11,
    "kind": "ArraysExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 14,
  },
  Object {
    "id": 3,
    "kind": "SetShorthand",
    "pos": 19,
  },
  Object {
    "id": 19,
    "kind": "VariableReferenceExpression",
    "pos": 19,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 21,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 26,
  },
]
`;

exports[`Checker types - should-work-with-slot-assignment 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 8,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 20,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 32,
  },
  Object {
    "id": 11,
    "kind": "VariableStatement",
    "pos": 35,
  },
  Object {
    "id": 14,
    "kind": "ObjectsExpression",
    "pos": 43,
  },
  Object {
    "id": 16,
    "kind": "VariableSlot",
    "pos": 55,
  },
  Object {
    "id": 18,
    "kind": "ObjectsExpression",
    "pos": 63,
  },
  Object {
    "id": 19,
    "kind": "VariableSlot",
    "pos": 79,
  },
  Object {
    "id": 20,
    "kind": "ObjectsExpression",
    "pos": 87,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 107,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 115,
  },
  Object {
    "id": 4,
    "kind": "SlotAssignmentExpression",
    "pos": 118,
  },
  Object {
    "id": 22,
    "kind": "VariableReferenceExpression",
    "pos": 118,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 128,
  },
  Object {
    "id": 4,
    "kind": "SlotAssignmentExpression",
    "pos": 138,
  },
  Object {
    "id": 26,
    "kind": "SlotLookupExpression",
    "pos": 136,
  },
  Object {
    "id": 30,
    "kind": "SlotLookupExpression",
    "pos": 132,
  },
  Object {
    "id": 34,
    "kind": "VariableReferenceExpression",
    "pos": 132,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 142,
  },
]
`;

exports[`Checker types - should-work-with-slot-lookup 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 8,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 20,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 32,
  },
  Object {
    "id": 11,
    "kind": "VariableStatement",
    "pos": 35,
  },
  Object {
    "id": 14,
    "kind": "ObjectsExpression",
    "pos": 43,
  },
  Object {
    "id": 16,
    "kind": "VariableSlot",
    "pos": 55,
  },
  Object {
    "id": 18,
    "kind": "ObjectsExpression",
    "pos": 63,
  },
  Object {
    "id": 19,
    "kind": "VariableSlot",
    "pos": 79,
  },
  Object {
    "id": 20,
    "kind": "ObjectsExpression",
    "pos": 87,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 107,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 115,
  },
  Object {
    "id": 4,
    "kind": "SlotLookupExpression",
    "pos": 119,
  },
  Object {
    "id": 22,
    "kind": "VariableReferenceExpression",
    "pos": 119,
  },
  Object {
    "id": 4,
    "kind": "SlotLookupExpression",
    "pos": 134,
  },
  Object {
    "id": 26,
    "kind": "SlotLookupExpression",
    "pos": 132,
  },
  Object {
    "id": 30,
    "kind": "SlotLookupExpression",
    "pos": 128,
  },
  Object {
    "id": 34,
    "kind": "VariableReferenceExpression",
    "pos": 128,
  },
]
`;

exports[`Checker types - should-work-with-type-arrays 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 15,
    "kind": "ArraysExpression",
    "pos": 24,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 30,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 34,
  },
]
`;

exports[`Checker types - should-work-with-type-function-call 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "ParameterDeclaration",
    "pos": 9,
  },
  Object {
    "id": 4,
    "kind": "ParameterDeclaration",
    "pos": 21,
  },
  Object {
    "id": 4,
    "kind": "SequenceOfStatements",
    "pos": 50,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 50,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 54,
  },
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 57,
  },
  Object {
    "id": 4,
    "kind": "FunctionCallExpression",
    "pos": 65,
  },
  Object {
    "id": 10,
    "kind": "VariableReferenceExpression",
    "pos": 65,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 69,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 72,
  },
]
`;

exports[`Checker types - should-work-with-type-function-expression 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "SequenceOfStatements",
    "pos": 35,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 35,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 53,
  },
]
`;

exports[`Checker types - should-work-with-type-function-parameter 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "ParameterDeclaration",
    "pos": 9,
  },
  Object {
    "id": 4,
    "kind": "SequenceOfStatements",
    "pos": 37,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 37,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 41,
  },
]
`;

exports[`Checker types - should-work-with-type-function-statement 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "FunctionStatement",
    "pos": 0,
  },
  Object {
    "id": 2,
    "kind": "SequenceOfStatements",
    "pos": 24,
  },
  Object {
    "id": 3,
    "kind": "PrintingExpression",
    "pos": 24,
  },
  Object {
    "id": 2,
    "kind": "NullExpression",
    "pos": 42,
  },
]
`;

exports[`Checker types - should-work-with-type-integer 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 17,
  },
]
`;

exports[`Checker types - should-work-with-type-method-signature 1`] = `
Array [
  Object {
    "id": 8,
    "kind": "TypeDefDeclaration",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "VariableSlotSignatureDeclaration",
    "pos": 17,
  },
  Object {
    "id": 9,
    "kind": "MethodSlotSignatureDeclaration",
    "pos": 36,
  },
]
`;

exports[`Checker types - should-work-with-type-method-slot 1`] = `
Array [
  Object {
    "id": 8,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 10,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 20,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 39,
  },
  Object {
    "id": 11,
    "kind": "MethodSlot",
    "pos": 45,
  },
  Object {
    "id": 1,
    "kind": "SequenceOfStatements",
    "pos": 88,
  },
  Object {
    "id": 1,
    "kind": "SlotLookupExpression",
    "pos": 88,
  },
  Object {
    "id": 0,
    "kind": "ThisExpression",
    "pos": 88,
  },
  Object {
    "id": 0,
    "kind": "VariableReferenceExpression",
    "pos": 99,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 103,
  },
]
`;

exports[`Checker types - should-work-with-type-null 1`] = `
Array [
  Object {
    "id": 3,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 14,
  },
]
`;

exports[`Checker types - should-work-with-type-typedef 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "TypeDefDeclaration",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "VariableSlotSignatureDeclaration",
    "pos": 17,
  },
]
`;

exports[`Checker types - should-work-with-type-variable-reference 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "TypeDefDeclaration",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "VariableSlotSignatureDeclaration",
    "pos": 17,
  },
  Object {
    "id": 0,
    "kind": "VariableStatement",
    "pos": 33,
  },
  Object {
    "id": 9,
    "kind": "ObjectsExpression",
    "pos": 46,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 58,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 66,
  },
]
`;

exports[`Checker types - should-work-with-type-variable-slot 1`] = `
Array [
  Object {
    "id": 7,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 8,
    "kind": "ObjectsExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableSlot",
    "pos": 20,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 39,
  },
]
`;

exports[`Checker types - should-work-with-variable-assignment 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableAssignmentExpression",
    "pos": 11,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 11,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 15,
  },
]
`;

exports[`Checker types - should-work-with-variable-reference 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 10,
  },
]
`;

exports[`Checker types - should-work-with-while-expression 1`] = `
Array [
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 0,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 8,
  },
  Object {
    "id": 4,
    "kind": "VariableStatement",
    "pos": 10,
  },
  Object {
    "id": 4,
    "kind": "IntegerLiteralExpression",
    "pos": 18,
  },
  Object {
    "id": 3,
    "kind": "WhileExpression",
    "pos": 22,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 28,
  },
  Object {
    "id": 4,
    "kind": "VariableAssignmentExpression",
    "pos": 35,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 35,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 39,
  },
  Object {
    "id": 4,
    "kind": "VariableReferenceExpression",
    "pos": 43,
  },
]
`;
